--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,12 @@
                 "GET",
                 "POST",
                 "PUT",
-                "DELETE"
+                "PATCH",
+                "OPTIONS",
+                "DELETE",
+                "HEAD",
+                "CONNECT",
+                "TRACE"
             ]
         }
     ]
